# gl-examples

./: CMakeLists.txt  LICENSE
common/: Mesh.cpp  application.h  assimp_model.cpp  assimp_model.h  helper.cpp  helper.h  log.h  main.cpp  mesh.h  model.cpp  model.h  orbit_camera.cpp  orbit_camera.h  platform.h  shader.cpp  shader.h  texture.cpp  texture.h  transfrom.cpp  transfrom.h
core/: assimp_scene.hpp  camera.hpp  helper.cpp  helper.h  main.cpp  mesh.hpp  orbit_camera.hpp  platform.h  scene.hpp  shader.hpp  texture.cpp  texture.h  transfrom.hpp
gl-hellotriangle/: CMakeLists.txt
gl-hellotriangle/src/: CreateApplication.cpp  application.cpp  assimp_mesh_test.cpp  hellotriangle.cpp  hellotriangle.h  mesh_test.cpp
gl-sandbox/: CMakeLists.txt
gl-sandbox/src/: assimp_mesh_test.cpp  assimp_mesh_test.h  hellotriangle.cpp  hellotriangle.h  mesh_test.cpp  mesh_test.h
platform/android/: android_interface.h
platform/egl/: egl_interface.cpp  egl_interface.h
resources/res/models/: box2.mtl
resources/res/shaders/: lighting01.frag  lighting01.vert  simple.frag  simple.vert  simple_mvp.vert  simpletexture.frag  simpletexture.vert  solid.vert
